data/derived/sp14/progs/unify/prog0671.ml.out
Characters 30-42:
  "[" ^ (List.map f) ^ "]";;
        ^^^^^^^^^^^^
Error: This expression has type 'a list -> 'b list
       but an expression was expected of type string
